# genai-portfolio

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  notebook-check.yml  notebooks-full-run.yml
docs/: ds_ml_genai_concepts_and_datasets.md
genai/: README.md
genai/notebooks/: 01_prompt_engineering.ipynb  02_embeddings_and_rag.ipynb  03_responsible_genai.ipynb  04_finetuning_and_qlora.ipynb
scripts/: run_notebooks.py
src/portfolio_common/: __init__.py  responsible_ai.py
